tempfile/auto_impl/tests/compile-fail/mut_self_for_arc.rs
use auto_impl::auto_impl;


#[auto_impl(Arc)]
trait Foo {
    fn foo(&mut self);
}


fn main() {}
